// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering compiler optimizing basic rendering changing root component 1`] = `
<div>
  <span>
    first
  </span>
</div>
`;

exports[`rendering compiler optimizing basic rendering changing root component 2`] = `
<span>
  Empty
</span>
`;

exports[`rendering compiler optimizing basic rendering changing root component 3`] = `
<div>
  <span>
    Added a new item first item
  </span>
</div>
`;

exports[`rendering compiler optimizing basic rendering using DOM types directly 1`] = `
<div>
  <span>
    first
  </span>
  <span>
    second
  </span>
  <span>
    third
  </span>
</div>
`;

exports[`rendering compiler optimizing basic rendering using DOM types directly 2`] = `
<div>
  <span>
    first
  </span>
  <span>
    changed the second item
  </span>
  <span>
    third
  </span>
</div>
`;

exports[`rendering compiler optimizing basic rendering using DOM types directly 3`] = `
<div>
  <span>
    first
  </span>
  <span>
    changed the second item
  </span>
  <span>
    third
  </span>
  <span>
    Added a fourth item
  </span>
</div>
`;

exports[`rendering compiler optimizing basic rendering using functions in compNames map 1`] = `
<div>
  <span>
    first
  </span>
  <span>
    second
  </span>
  <span>
    third
  </span>
</div>
`;

exports[`rendering compiler optimizing basic rendering using functions in compNames map 2`] = `
<div>
  <span>
    first
  </span>
  <span>
    changed the second item
  </span>
  <span>
    third
  </span>
</div>
`;

exports[`rendering compiler optimizing basic rendering using functions in compNames map 3`] = `
<div>
  <span>
    first
  </span>
  <span>
    changed the second item
  </span>
  <span>
    third
  </span>
  <span>
    Added a fourth item
  </span>
</div>
`;

exports[`rendering compiler optimizing clone 1`] = `
<div>
  <span
    style={
      Object {
        "background": "red",
      }
    }
  >
    hello
  </span>
</div>
`;

exports[`rendering compiler optimizing clone 2`] = `
<div>
  <span
    style={
      Object {
        "background": "blue",
      }
    }
  >
    hello
  </span>
</div>
`;

exports[`rendering compiler optimizing copy props to observer 1`] = `
<div
  className="visible"
  id="test"
/>
`;

exports[`rendering compiler optimizing copy props to observer 2`] = `
<div
  className="visible"
  id="changed"
/>
`;

exports[`rendering compiler optimizing multiple children support 1`] = `
<div>
  <span
    onClick={[Function]}
  >
    - first
  </span>
  <span
    onClick={[Function]}
  >
    - second
  </span>
  <span
    onClick={[Function]}
  >
    - third
  </span>
  <span>
    items not clicked:
    3
  </span>
</div>
`;

exports[`rendering compiler optimizing multiple children support 2`] = `
<div>
  <span
    onClick={[Function]}
  >
    + first
  </span>
  <span
    onClick={[Function]}
  >
    - second
  </span>
  <span
    onClick={[Function]}
  >
    - third
  </span>
  <span>
    items not clicked:
    2
  </span>
</div>
`;

exports[`rendering compiler optimizing plugins 1`] = `
<span
  data="auto-generated"
>
  <div>
    <span
      data="auto-generated"
    >
      <span>
        first
      </span>
    </span>
    <span
      data="auto-generated"
    >
      <span>
        second
      </span>
    </span>
  </div>
</span>
`;

exports[`rendering compiler optimizing refs forwarding should work 1`] = `
<input
  value="test"
/>
`;

exports[`rendering compiler simple basic rendering changing root component 1`] = `
<div>
  <span>
    first
  </span>
</div>
`;

exports[`rendering compiler simple basic rendering changing root component 2`] = `
<span>
  Empty
</span>
`;

exports[`rendering compiler simple basic rendering changing root component 3`] = `
<div>
  <span>
    Added a new item first item
  </span>
</div>
`;

exports[`rendering compiler simple basic rendering using DOM types directly 1`] = `
<div>
  <span>
    first
  </span>
  <span>
    second
  </span>
  <span>
    third
  </span>
</div>
`;

exports[`rendering compiler simple basic rendering using DOM types directly 2`] = `
<div>
  <span>
    first
  </span>
  <span>
    changed the second item
  </span>
  <span>
    third
  </span>
</div>
`;

exports[`rendering compiler simple basic rendering using DOM types directly 3`] = `
<div>
  <span>
    first
  </span>
  <span>
    changed the second item
  </span>
  <span>
    third
  </span>
  <span>
    Added a fourth item
  </span>
</div>
`;

exports[`rendering compiler simple basic rendering using functions in compNames map 1`] = `
<div>
  <span>
    first
  </span>
  <span>
    second
  </span>
  <span>
    third
  </span>
</div>
`;

exports[`rendering compiler simple basic rendering using functions in compNames map 2`] = `
<div>
  <span>
    first
  </span>
  <span>
    changed the second item
  </span>
  <span>
    third
  </span>
</div>
`;

exports[`rendering compiler simple basic rendering using functions in compNames map 3`] = `
<div>
  <span>
    first
  </span>
  <span>
    changed the second item
  </span>
  <span>
    third
  </span>
  <span>
    Added a fourth item
  </span>
</div>
`;

exports[`rendering compiler simple clone 1`] = `
<div>
  <span
    style={
      Object {
        "background": "red",
      }
    }
  >
    hello
  </span>
</div>
`;

exports[`rendering compiler simple clone 2`] = `
<div>
  <span
    style={
      Object {
        "background": "blue",
      }
    }
  >
    hello
  </span>
</div>
`;

exports[`rendering compiler simple copy props to observer 1`] = `
<div
  className="visible"
  id="test"
/>
`;

exports[`rendering compiler simple copy props to observer 2`] = `
<div
  className="visible"
  id="changed"
/>
`;

exports[`rendering compiler simple multiple children support 1`] = `
<div>
  <span
    onClick={[Function]}
  >
    - first
  </span>
  <span
    onClick={[Function]}
  >
    - second
  </span>
  <span
    onClick={[Function]}
  >
    - third
  </span>
  <span>
    items not clicked:
    3
  </span>
</div>
`;

exports[`rendering compiler simple multiple children support 2`] = `
<div>
  <span
    onClick={[Function]}
  >
    + first
  </span>
  <span
    onClick={[Function]}
  >
    - second
  </span>
  <span
    onClick={[Function]}
  >
    - third
  </span>
  <span>
    items not clicked:
    2
  </span>
</div>
`;

exports[`rendering compiler simple plugins 1`] = `
<span
  data="auto-generated"
>
  <div>
    <span
      data="auto-generated"
    >
      <span>
        first
      </span>
    </span>
    <span
      data="auto-generated"
    >
      <span>
        second
      </span>
    </span>
  </div>
</span>
`;

exports[`rendering compiler simple refs forwarding should work 1`] = `
<input
  value="test"
/>
`;
